add observation spring 3 sample

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,15 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=temporalLog
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
+
+spring.application.name=server
+
+# All traces should be sent to latency analysis tool
+management.tracing.sampling.probability=1.0
+management.endpoints.web.exposure.include=prometheus
+
+# For Exemplars to work we need histogram buckets
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
